log/build_2024-01-05_23-59-40/moja_paczka/stdout_stderr.log
running egg_info
writing ../../build/moja_paczka/moja_paczka.egg-info/PKG-INFO
writing dependency_links to ../../build/moja_paczka/moja_paczka.egg-info/dependency_links.txt
writing entry points to ../../build/moja_paczka/moja_paczka.egg-info/entry_points.txt
writing requirements to ../../build/moja_paczka/moja_paczka.egg-info/requires.txt
writing top-level names to ../../build/moja_paczka/moja_paczka.egg-info/top_level.txt
reading manifest file '../../build/moja_paczka/moja_paczka.egg-info/SOURCES.txt'
writing manifest file '../../build/moja_paczka/moja_paczka.egg-info/SOURCES.txt'
running build
running build_py
running install
running install_lib
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
byte-compiling /home/borowa/ros2_ws/install/moja_paczka/lib/python3.10/site-packages/moja_paczka/publisher.py to publisher.cpython-310.pyc
running install_data
  File "/home/borowa/ros2_ws/install/moja_paczka/lib/python3.10/site-packages/moja_paczka/publisher.py", line 35
    if self.x_y[1] > self.window_size[1]
                                        ^
SyntaxError: expected ':'

running install_egg_info
removing '/home/borowa/ros2_ws/install/moja_paczka/lib/python3.10/site-packages/moja_paczka-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/moja_paczka/moja_paczka.egg-info to /home/borowa/ros2_ws/install/moja_paczka/lib/python3.10/site-packages/moja_paczka-0.0.0-py3.10.egg-info
running install_scripts
Installing publisher script to /home/borowa/ros2_ws/install/moja_paczka/lib/moja_paczka
writing list of installed files to '/home/borowa/ros2_ws/build/moja_paczka/install.log'
